# homestar

./: .dockerignore  .env  .envrc  .gitignore  .ignore  .pre-commit-config.yaml  .release-please-manifest.json  .rustfmt.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  Dockerfile  README.md  SECURITY.md  codecov.yml  deny.toml  diesel.toml  flake.nix  release-please-config.json  release-plz.toml  rust-toolchain.toml
examples/websocket-relay/: Cargo.toml  README.md  example_test.wasm
examples/websocket-relay/config/: settings.toml
examples/websocket-relay/relay-app/: .env  .eslintrc.json  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  vite.config.ts
examples/websocket-relay/src/: main.rs
homestar/: Cargo.toml
homestar-core/: CHANGELOG.md  Cargo.toml
homestar-core/src/: consts.rs  lib.rs  macros.rs  unit.rs  workflow.rs
homestar-core/src/ipld/: dag_cbor.rs  dag_json.rs  link.rs  mod.rs
homestar-core/src/test_utils/: cid.rs  mod.rs  ports.rs  rvg.rs  workflow.rs
homestar-core/src/workflow/: ability.rs  config.rs  error.rs  input.rs  instruction.rs  instruction_result.rs  invocation.rs  invocation_result.rs  issuer.rs  mod.rs  nonce.rs  pointer.rs  prf.rs  receipt.rs  task.rs
homestar-functions/: Cargo.toml  README.md
homestar-functions/add/: Cargo.toml
homestar-functions/add/src/: bindings.rs  lib.rs
homestar-functions/add/wit/: host.wit  world.wit
homestar-functions/basic/: Cargo.toml
homestar-functions/basic/wit/: test.wit
homestar-functions/llm/: Cargo.toml
homestar-functions/llm/src/: bindings.rs  lib.rs
homestar-functions/llm/wit/: deps.toml  world.wit
homestar-functions/markdown-html/: Cargo.toml  markdown-html.wit
homestar-functions/markdown-html/src/: lib.rs
homestar-functions/src/: lib.rs
homestar-functions/src/example/: add.rs
homestar-functions/subtract/: Cargo.toml
homestar-functions/subtract/src/: bindings.rs  lib.rs
homestar-functions/subtract/wit/: world.wit
homestar-functions/test/: Cargo.toml
homestar-functions/test/src/: bindings.rs  lib.rs
homestar-functions/test/wit/: host.wit  world.wit
homestar-functions/wit/: add.wit
homestar-guest-wasm/: Cargo.toml  README.md
homestar-guest-wasm/src/: lib.rs
homestar-guest-wasm/wits/: test.wit
homestar-invocation/: CHANGELOG.md  Cargo.toml  README.md  test_task.json
homestar-invocation/src/: consts.rs  error.rs  invocation.rs  lib.rs  macros.rs  pointer.rs  receipt.rs  task.rs  unit.rs
homestar-invocation/src/authority/: issuer.rs  mod.rs  prf.rs
homestar-invocation/src/ipld/: dag_cbor.rs  dag_json.rs  link.rs  mod.rs  schema.rs
homestar-invocation/src/receipt/: metadata.rs
homestar-invocation/src/task/: config.rs  instruction.rs  result.rs
homestar-invocation/src/test_utils/: cid.rs  invocation.rs  mod.rs
homestar-runtime/: CHANGELOG.md  Cargo.toml  README.md  build.rs
homestar-runtime/config/: defaults.toml  settings.toml  testkey.pem
homestar-runtime/fixtures/: __testkey_ed25519_2.pem  __testkey_ed25519_3.pem  __testkey_ed25519_4.pem  __testkey_ed25519_5.pem  __testkey_ed25519_6.pem  __testkey_secp256k1.der  defaults.toml  secp_testkey.pem  settings-import-ed25519-with-params.toml  settings-import-ed25519.toml  settings-import-secp256k1.toml  settings-random-secp256k1.toml  settings.toml  test-workflow-add-one.json  test_v4.toml
homestar-runtime/migrations/2022-12-11-183928_create_receipts/: up.sql
homestar-runtime/migrations/2023-06-04-135955_create_workflows/: down.sql  up.sql
homestar-runtime/migrations/2023-06-04-183928_create_receipts/: down.sql  up.sql
homestar-runtime/migrations/2023-06-07-023422_create_workflows_receipts/: down.sql  up.sql
homestar-runtime/migrations/2024-02-13-141620_add_workflows_status/: down.sql  up.sql
homestar-runtime/npm/: README.md  package-json-base.tmpl  package-json-baserc.tmpl  package.json.tmpl  readme.md
homestar-runtime/npm/base/: index.js  package-lock.json  package.json
homestar-runtime/schemas/: api.json  generate.rs  health.json  network.json  node_info.json  receipt.json  workflow.json
homestar-runtime/schemas/docs/: api.json  metrics.json  receipt_notification.json
homestar-runtime/schemas/openrpc/: document.rs
homestar-runtime/src/: api.rs  channel.rs  cli.rs  daemon.rs  db.rs  event_handler.rs  ip.rs  lib.rs  logger.rs  main.rs  metrics.rs  receipt.rs  runner.rs  runtime.rs  scheduler.rs  settings.rs  tasks.rs  worker.rs  workflow.rs
homestar-runtime/src/cli/: error.rs  init.rs  show.rs
homestar-runtime/src/db/: schema.patch  (+2 more)
homestar-runtime/tests/: cli.rs  main.rs  metrics.rs  network.rs  utils.rs  webserver.rs
homestar-schemas/: Cargo.toml
homestar-schemas/src/: main.rs
homestar-wasm/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
homestar-wasm/fixtures/: add_one.wat  add_one.wit  add_one_component.wat  example_add.wasm  example_add.wat  example_add_cargo_component_wasi.wasm  example_add_cargo_component_wasi.wat  example_add_component.wasm  example_add_component.wat  example_subtract.wasm  example_subtract.wat  example_subtract_cargo_component_wasi.wasm  example_subtract_cargo_component_wasi.wat  example_subtract_component.wasm  example_subtract_component.wat  example_test.wasm  example_test_cargo_component.wasm  example_test_cargo_component_wasi.wasm  example_test_component.wasm  example_test_wasi.wasm  example_test_wasi_component.wasm  homestar-guest-wasm.wasm  homestar_guest_wasm.wasm  homestar_guest_wasm_component.wasm  host.wasm
homestar-wasm/src/: error.rs  io.rs  lib.rs
homestar-wasm/tests/: execute_wasm.rs
homestar-wasm/wit/: helpers.wit
homestar-workflow/: CHANGELOG.md  Cargo.toml  README.md
homestar-workflow/src/: lib.rs  linkmap.rs  workflow.rs
homestar/src/: cli.rs  consts.rs  db.rs  lib.rs  main.rs  schema.rs
ipvm/: Cargo.toml
ipvm-wasm/: Cargo.toml
ipvm-wasm/fixtures/: add_one.wasm
ipvm-wasm/src/: lib.rs
ipvm-wasm/tests/: execute_wasm.rs
ipvm/fixtures/: add_one.wit  add_one_component.wasm  ipvm_guest_wasm.wasm
ipvm/src/: lib.rs  main.rs
(+292 files in other folders)
