[workspace]
members = [
    "homestar-core",
    "homestar-functions",
    "homestar-runtime",
    "homestar-wasm"
]
resolver = "2"

[workspace.package]
authors = [
    "Zeeshan Lakhani <zeeshan@fission.codes>",
    "Brooklyn Zelenka <hello@brooklynzelenka.com>"
]
edition = "2021"
license = "Apache"
rust-version = "1.68"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
atomic_refcell = "0.1"
byte-unit = { version = "4.0", default-features = false }
chrono = "0.4"
enum-assoc = " 1.1"
enum-as-inner = "0.6"
futures = "0.3"
humantime = "2.1"
itertools = "0.11"
libipld = { version = "0.16", features = ["serde-codec"] }
rand = "0.8"
serde_ipld_dagcbor = "0.3"
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.29", features = ["fs", "io-util", "io-std", "macros", "rt",
    "rt-multi-thread", "signal", "sync", "tracing"] }
tracing = "0.1"
ucan = "0.4"
ucan-key-support = "0.1"

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
debug-assertions = true
split-debuginfo = "unpacked"

[profile.release]
# compiling with link time optimizations (LTO)
lto = true

[profile.release.package.homestar-core]
debug-assertions = false

[profile.release.package.homestar-runtime]
codegen-units = 1
debug-assertions = false

[profile.release.package.homestar-wasm]
# match wasmtime
opt-level = 0
debug-assertions = false

[profile.release.package.homestar-functions]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z" # 'z' to optimize "aggressively" for size
# Strip debug symbols
# "symbols" issue: https://github.com/rust-lang/rust/issues/93294
strip = "symbols"
# Amount of debug information.
# 0/false: no debug info at all; 1: line tables only; 2/true: full debug info
debug = false
debug-assertions = false
