[package]
name = "homestar-core"
version = "0.1.0"
description = "Homestar core library for working with tasks, instructions, etc"
keywords = ["ipld", "tasks", "receipts", "ipvm"]
categories = ["workflow-engines", "core", "libraries"]
include = ["/src", "README.md", "LICENSE"]
license = { workspace = true }
readme = "README.md"
edition = { workspace = true }
rust-version = { workspace = true }
documentation = "https://docs.rs/homestar-core"
repository = "https://github.com/ipvm-wg/homestar"
authors = { workspace = true }

[lib]
path = "src/lib.rs"
bench = false
doctest = true

[dependencies]
# return to version.workspace = true after the following issue is fixed:
# https://github.com/DevinR528/cargo-sort/issues/47
anyhow = { workspace = true }
async-recursion = "1.0"
byte-unit = { workspace = true }
diesel = { version = "2.1", features = ["sqlite"] }
enum-as-inner = { workspace = true }
enum-assoc = { workspace = true }
futures = { workspace = true }
generic-array = { version = "0.14", features = ["serde"] }
indexmap = "2.0"
libipld = { workspace = true }
libsqlite3-sys = { version = "0.26", features = ["bundled"] }
once_cell = { version = "1.18", optional = true }
proptest = { version = "1.2", optional = true }
rand = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
signature = "2.0"
thiserror = { workspace = true }
tracing = { workspace = true }
ucan = { workspace = true }
url = { version = "2.4", features = ["serde"] }
uuid = { version = "1.4", default-features = false, features = ["v4", "fast-rng"] }
xid = "1.0"

[dev-dependencies]
criterion = "0.5"
json = "0.12"

[features]
default = []
test-utils = ["once_cell", "proptest"]

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
