[package]
name = "homestar-core"
version = { workspace = true }
description = "Homestar core library for working with tasks, instructions, etc"
keywords = ["ipld", "tasks", "receipts", "ipvm"]
categories = ["workflow-engines", "core", "libraries"]
license = { workspace = true }
readme = "README.md"
edition = { workspace = true }
rust-version = { workspace = true }
documentation = "https://docs.rs/homestar-core"
repository = { workspace = true }
authors = { workspace = true }

[lib]
path = "src/lib.rs"
bench = false
doctest = true

[dependencies]
# return to version.workspace = true after the following issue is fixed:
# https://github.com/DevinR528/cargo-sort/issues/47
anyhow = { workspace = true }
async-recursion = { version = "1.0", default-features = false }
byte-unit = { workspace = true }
diesel = { version = "2.1", default-features = false }
enum-as-inner = { workspace = true }
enum-assoc = { workspace = true }
futures = { workspace = true }
generic-array = { version = "1.0", default-features = false, features = [
  "serde",
] }
indexmap = { version = "2.1", default-features = false }
libipld = { workspace = true }
libsqlite3-sys = { version = "0.27", default-features = false, features = [
  "bundled",
] }
once_cell = { version = "1.18", default-features = false, optional = true }
proptest = { version = "1.2", optional = true }
rand = { workspace = true }
serde = { workspace = true }
signature = "2.2"
thiserror = { workspace = true }
tracing = { workspace = true }
ucan = { workspace = true }
url = { version = "2.3", default-features = false, features = ["serde"] }
uuid = { version = "1.5", default-features = false, features = [
  "v4",
  "fast-rng",
] }
xid = { version = "1.0", default-features = false }

[dev-dependencies]
criterion = "0.5"
json = "0.12"
serde_json = { version = "1.0", default-features = false }

[features]
default = []
test-utils = ["once_cell", "proptest"]

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
