[package]
name = "homestar-functions"
publish = false
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
image = { version = "0.24", default-features = false, features = ["png"], optional = true }
wit-bindgen = "0.9"

[dev-dependencies]
image = "0.24"

[lib]
doc = false
bench = false
crate-type = ["cdylib", "rlib"]

[features]
default = []
run_image_tests = []
example-add = []
example-test = ["image"]
