[package]
name = "homestar-guest-wasm"
publish = false
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
wit-bindgen = "0.6"

[dev-dependencies]
image = "0.24"

[lib]
doc = false
bench = false
crate-type = ["cdylib", "rlib"]
