[package]
name = "homestar-runtime"
version = "0.1.0"
description = "Homestar CLI"
keywords = ["ipfs", "workflows", "ipld", "ipvm"]
categories = [
  "workflow-engines",
  "distributed-systems",
  "runtimes",
  "networking",
]
include = ["/src", "README.md", "LICENSE"]
license = { workspace = true }
readme = "README.md"
edition = { workspace = true }
rust-version = { workspace = true }
documentation = "https://docs.rs/homestar"
repository = "https://github.com/ipvm-wg/homestar"
authors = { workspace = true }
autotests = false

[lib]
path = "src/lib.rs"
bench = false
doctest = true
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "homestar"
path = "src/main.rs"
doc = false
bench = false

[[test]]
name = "integration"
path = "tests/main.rs"

[dependencies]
# return to version.workspace = true after the following issue is fixed:
# https://github.com/DevinR528/cargo-sort/issues/47
anyhow = { workspace = true }
async-trait = "0.1"
atomic_refcell = { workspace = true }
axum = { version = "0.6", default-features = false, features = [
  "ws",
  "headers",
], optional = true }
byte-unit = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.4", default-features = false, features = [
  "derive",
  "color",
  "help",
  "env",
  "std",
] }
config = { version = "0.13", default-features = false, features = ["toml"] }
console-subscriber = { version = "0.1", default-features = false, features = [
  "parking_lot",
], optional = true }
crossbeam = "0.8"
dagga = "0.2"
dashmap = "5.5"
diesel = { version = "2.1", default-features = false, features = [
  "sqlite",
  "r2d2",
  "returning_clauses_for_sqlite_3_35",
  "with-deprecated",
  "chrono",
] }
diesel_migrations = "2.1"
dotenvy = "0.15"
enum-assoc = { workspace = true }
faststr = { workspace = true }
flume = { version = "0.11", default-features = false, features = ["async"] }
fnv = { version = "1.0", default-features = false }
futures = { workspace = true }
headers = "0.3"
homestar-core = { version = "0.1", path = "../homestar-core" }
homestar-wasm = { version = "0.1", path = "../homestar-wasm", default-features = false }
http = "0.2"
http-serde = "1.1"
humantime = { workspace = true }
indexmap = { version = "2.0", default-features = false, features = ["serde"] }
ipfs-api = { version = "0.17", optional = true }
ipfs-api-backend-hyper = { version = "0.6", default-features = false, features = [
  "with-builder",
  "with-send-sync",
], optional = true }
itertools = { workspace = true }
libipld = { workspace = true }
libp2p = { version = "0.52", default-features = false, features = [
  "kad",
  "request-response",
  "rendezvous",
  "identify",
  "ed25519",
  "secp256k1",
  "mdns",
  "gossipsub",
  "request-response",
  "tokio",
  "tcp",
  "noise",
  "cbor",
  "yamux",
] }
libsqlite3-sys = { version = "0.26", default-features = false, features = [
  "bundled",
] }
metrics = { version = "0.21", default-features = false, optional = true }
metrics-exporter-prometheus = { version = "0.12.1", default-features = false, features = [
  "http-listener",
], optional = true }
miette = { version = "5.10", default-features = false, features = ["fancy"] }
names = { version = "0.14", default-features = false, optional = true }
proptest = { version = "1.2", optional = true }
puffin = { version = "0.17", default-features = false, optional = true }
puffin_egui = { version = "0.22.0", default-features = false, optional = true }
rand = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = [
  "blocking",
  "json",
] }
sec1 = { version = "0.7", default-features = false, features = ["pem"] }
semver = { version = "1.0", default-features = false }
serde = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_json = { version = "1.0", optional = true, default-features = false, features = [
  "raw_value",
] }
serde_with = { version = "3.3", default-features = false, features = [
  "base64",
  "macros",
  "std",
] }
stream-cancel = "0.8"
strum = { version = "0.25", default-features = false, features = ["derive"] }
sysinfo = { version = "0.29", default-features = false, optional = true }
tabled = { version = "0.14", default-features = false, features = [
  "derive",
  "macros",
] }
tarpc = { version = "0.33", default-features = false, features = [
  "serde-transport",
  "tcp",
] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-serde = { version = "0.8", default-features = false, features = [
  "messagepack",
] }
tokio-util = { version = "0.7", default-features = false }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-logfmt = "0.3"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "parking_lot",
  "registry",
] }
tryhard = "0.5"
url = "2.4"
wnfs-common = "0.1"

[target.'cfg(not(windows))'.dependencies]
daemonize = "0.5"

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5"
homestar-core = { version = "0.1", path = "../homestar-core", features = [
  "test-utils",
] }
homestar_runtime_proc_macro = { path = "src/test_utils/proc_macro", package = "homestar-runtime-tests-proc-macro" }
nix = { version = "0.27", features = ["signal"] }
once_cell = { version = "1.18", default-features = false }
predicates = { version = "3.0", default-features = false }
prometheus-parse = "0.2.4"
rand = { workspace = true }
retry = { version = "2.0", default-features = false }
serial_test = { version = "2.0", default-features = false, features = [
  "file_locks",
] }
tokio-tungstenite = { version = "0.20", default-features = false }
wait-timeout = "0.2"

[features]
default = ["wasmtime-default", "ipfs", "monitoring", "websocket-notify"]
dev = ["ansi-logs", "ipfs", "monitoring", "websocket-notify"]
ansi-logs = ["tracing-logfmt/ansi_logs"]
console = ["dep:console-subscriber"]
ipfs = ["dep:ipfs-api", "dep:ipfs-api-backend-hyper"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
monitoring = ["metrics", "dep:sysinfo"]
profile = ["dep:puffin", "dep:puffin_egui"]
test-utils = ["dep:proptest"]
wasmtime-default = ["homestar-wasm/default"]
websocket-notify = ["websocket-server", "dep:serde_json", "dep:names"]
websocket-server = ["dep:axum"]

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
