[package]
name = "homestar-runtime"
version = { workspace = true }
description = "Homestar CLI"
keywords = ["ipfs", "workflows", "ipld", "ipvm"]
categories = [
  "workflow-engines",
  "distributed-systems",
  "runtimes",
  "networking",
]
license = { workspace = true }
readme = "README.md"
edition = { workspace = true }
rust-version = { workspace = true }
documentation = "https://docs.rs/homestar"
repository = { workspace = true }
authors = { workspace = true }
autotests = false

[lib]
path = "src/lib.rs"
bench = false
doctest = true

[[bin]]
name = "homestar"
path = "src/main.rs"
doc = false
bench = false

[[test]]
name = "integration"
path = "tests/main.rs"
required-features = ["test-utils"]

[dependencies]
# return to version.workspace = true after the following issue is fixed:
# https://github.com/DevinR528/cargo-sort/issues/47
anyhow = { workspace = true }
async-trait = "0.1"
atomic_refcell = { workspace = true }
byte-unit = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.4", default-features = false, features = [
  "derive",
  "color",
  "help",
  "env",
  "std",
  "usage",
] }
config = { version = "0.13", default-features = false, features = ["toml"] }
console-subscriber = { version = "0.2", default-features = false, features = [
  "parking_lot",
], optional = true }
const_format = "0.2"
crossbeam = "0.8"
dagga = "0.2"
dashmap = "5.5"
diesel = { version = "2.1", default-features = false, features = [
  "sqlite",
  "r2d2",
  "returning_clauses_for_sqlite_3_35",
  "with-deprecated",
  "chrono",
] }
diesel_migrations = "2.1"
dotenvy = "0.15"
dyn-clone = "1.0"
enum-assoc = { workspace = true }
faststr = { workspace = true }
flume = { version = "0.11", default-features = false, features = ["async"] }
fnv = { version = "1.0", default-features = false }
futures = { workspace = true }
headers = "0.4"
homestar-core = { version = "0.1", path = "../homestar-core" }
homestar-wasm = { version = "0.1", path = "../homestar-wasm", default-features = false }
http = "0.2"
http-serde = "1.1"
humantime = { workspace = true }
indexmap = { version = "2.1", default-features = false, features = ["serde"] }
ipfs-api = { version = "0.17", optional = true }
ipfs-api-backend-hyper = { version = "0.6", default-features = false, features = [
  "with-builder",
  "with-send-sync",
], optional = true }
itertools = { workspace = true }
jsonrpsee = { version = "0.20", default-features = false, features = [
  "server",
] }
libipld = { workspace = true }
libp2p = { version = "0.52", default-features = false, features = [
  "kad",
  "request-response",
  "rendezvous",
  "identify",
  "ed25519",
  "secp256k1",
  "mdns",
  "gossipsub",
  "request-response",
  "tokio",
  "tcp",
  "noise",
  "cbor",
  "yamux",
  "serde",
] }
libsqlite3-sys = { version = "0.26", default-features = false, features = [
  "bundled",
] }
maplit = "1.0"
metrics = { version = "0.21", default-features = false }
metrics-exporter-prometheus = { version = "0.12.1", default-features = false, features = [
  "http-listener",
] }
metrics-util = "0.15"
miette = { version = "5.10", default-features = false, features = ["fancy"] }
moka = { version = "0.12.1", default-features = false, features = [
  "future",
  "sync",
] }
names = { version = "0.14", default-features = false }
once_cell = { version = "1.18", default-features = false }
proptest = { version = "1.2", optional = true }
puffin = { version = "0.18", default-features = false, optional = true }
puffin_egui = { version = "0.23.0", default-features = false, optional = true }
rand = { workspace = true }
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = [
  "blocking",
  "json",
] }
sec1 = { version = "0.7", default-features = false, features = ["pem"] }
semver = { version = "1.0", default-features = false }
serde = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = [
  "raw_value",
] }
serde_with = { version = "3.3", default-features = false, features = [
  "base64",
  "macros",
  "std",
] }
stream-cancel = "0.8"
strum = { version = "0.25", default-features = false, features = ["derive"] }
sysinfo = { version = "0.29", default-features = false, optional = true }
tabled = { version = "0.14", default-features = false, features = [
  "derive",
  "macros",
] }
tarpc = { version = "0.33", default-features = false, features = [
  "serde-transport",
  "tcp",
] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-serde = { version = "0.8", default-features = false, features = [
  "messagepack",
] }
tokio-stream = { version = "0.1", default-features = false, features = [
  "sync",
] }
tokio-util = { version = "0.7", default-features = false }
tower = { version = "0.4", default-features = false, features = [
  "log",
  "timeout",
] }
tower-http = { version = "0.4", default-features = false, features = [
  "trace",
  "sensitive-headers",
  "catch-panic",
  "cors",
] }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-logfmt = "0.3"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "parking_lot",
  "registry",
] }
tryhard = "0.5"
typetag = "0.2"
url = "2.4"
wnfs-common = "0.1"

[target.'cfg(not(windows))'.dependencies]
daemonize = "0.5"

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5"
homestar-core = { version = "0.1", path = "../homestar-core", features = [
  "test-utils",
] }
homestar_runtime_proc_macro = { path = "src/test_utils/proc_macro", package = "homestar-runtime-tests-proc-macro" }
jsonrpsee = { version = "0.20", default-features = false, features = [
  "client",
] }
nix = { version = "0.27", features = ["signal"] }
predicates = { version = "3.0", default-features = false }
prometheus-parse = "0.2.4"
rand = { workspace = true }
retry = { version = "2.0", default-features = false }
rm_rf = "0.6"
serial_test = { version = "2.0", default-features = false, features = [
  "file_locks",
] }
strip-ansi-escapes = "0.2.0"
sysinfo = { version = "0.29", default-features = false }
tokio-test = "0.4"
tokio-tungstenite = { version = "0.20", default-features = false, features = [
  "connect",
] }
wait-timeout = "0.2"

[features]
default = ["wasmtime-default", "ipfs", "monitoring", "websocket-notify"]
dev = ["ansi-logs", "ipfs", "monitoring", "websocket-notify"]
ansi-logs = ["tracing-logfmt/ansi_logs"]
console = ["dep:console-subscriber"]
ipfs = ["dep:ipfs-api", "dep:ipfs-api-backend-hyper"]
monitoring = ["dep:sysinfo"]
profile = ["dep:puffin", "dep:puffin_egui"]
test-utils = ["dep:proptest"]
wasmtime-default = ["homestar-wasm/default"]
websocket-notify = []

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.deb.variants.x86_64-unknown-linux-musl]
maintainer = "James Walker <james@fission.codes>"
license-file = ["LICENSE", "0"]
extended-description-file = "README.md"
depends = ""
section = "network"
priority = "optional"
assets = [
  [
    "../target/x86_64-unknown-linux-musl/release/homestar",
    "usr/bin/",
    "755",
  ],
  [
    "../CHANGELOG.md",
    "usr/share/doc/homestar/",
    "644",
  ],
  [
    "../LICENSE",
    "usr/share/doc/homestar/",
    "644",
  ],
  [
    "../README.md",
    "usr/share/doc/homestar/",
    "644",
  ],
]

[package.metadata.deb.variants.x86_64-unknown-linux-gnu]
maintainer = "James Walker <james@fission.codes>"
license-file = ["LICENSE", "0"]
extended-description-file = "README.md"
depends = ""
section = "network"
priority = "optional"
assets = [
  [
    "../target/x86_64-unknown-linux-gnu/release/homestar",
    "usr/bin/",
    "755",
  ],
  [
    "../CHANGELOG.md",
    "usr/share/doc/homestar/",
    "644",
  ],
  [
    "../LICENSE",
    "usr/share/doc/homestar/",
    "644",
  ],
  [
    "../README.md",
    "usr/share/doc/homestar/",
    "644",
  ],
]

[package.metadata.generate-rpm.variants.x86_64-unknown-linux-musl]
assets = [
  { source = "../target/x86_64-unknown-linux-musl/release/homestar", dest = "/usr/bin/homestar", mode = "755" },
  { source = "../CHANGELOG.md", dest = "/usr/share/doc/homestar/CHANGELOG.md", mode = "644", doc = true },
  { source = "../LICENSE", dest = "/usr/share/doc/homestar/LICENSE.md", mode = "644", doc = true },
  { source = "../README.md", dest = "/usr/share/doc/homestar/README.md", mode = "644", doc = true },
]

[package.metadata.generate-rpm.variants.x86_64-unknown-linux-gnu]
assets = [
  { source = "../target/x86_64-unknown-linux-gnu/release/homestar", dest = "/usr/bin/homestar", mode = "755" },
  { source = "../CHANGELOG.md", dest = "/usr/share/doc/homestar/CHANGELOG.md", mode = "644", doc = true },
  { source = "../LICENSE", dest = "/usr/share/doc/homestar/LICENSE.md", mode = "644", doc = true },
  { source = "../README.md", dest = "/usr/share/doc/homestar/README.md", mode = "644", doc = true },
]
